MonetDB5/src/mal/Tests/tst302.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2004, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet5/Linux/var/MonetDB/dbfarm
# dbname:demo
# Visit http://monetdb.cwi.nl for further information.
##propagate INT exception
## (you should be able to pass it upwards though)
#raise	IllegalAccess := 1234;
#	print("should not come here\n");
#
function Admin.main():int;	# 0  (main:int)
    raise IllegalAccess := 1234;	# 1  (IllegalAccess:int)<-($2:int)
    io.print("should not come here\n");	# 2 IOprint_val ($3:int)<-($4:str)
end main;	# 3  
!ERROR: IllegalAccess:Admin.main[3]: propagated
>